@@ -165,11 +165,6 @@
 # to allow better contrast with text/links/background
 #contrast_visited_color=YES
 
-# Colors for widgets inside forms.
-# YES = toolkit's default colors, NO = use page's text and background color.
-# ("NO" looks less traditional but more stylish).
-#standard_widget_colors=NO
-
 
 #-------------------------------------------------------------------------
 #                        USER INTERFACE SECTION
